log/build_2024-07-23_09-39-13/pointcloud_publisher/stderr.log
  File "/home/airsim_user/Downloads/Landing-Assist-Module-LAM/install/pointcloud_publisher/lib/python3.8/site-packages/pointcloud_publisher/setup.py", line 24
    <<<<<<< HEAD
    ^
SyntaxError: invalid syntax

